--- a/css/main.css
+++ b/css/main.css
@@ -1,13 +1,21 @@
-/* 2020-12-13 JJK - still need this with bootstrap 4 */
-a.navbar-brand {
-	outline: 0;
+/* JJK 3/15/2020 */
+.link-tile {
+    width: 175px;
+}
+.link-tile-sm {
+    width: 130px;
 }
 
-a {
+/* Turn off the outline on clicks to brand anchors */
+li {
+	list-style-type: none;
+}
+a:link {
 	outline: 0;
 	text-decoration:none; 
-	}
-a:link {
+}
+/*
+a {
 	outline: 0;
 	text-decoration:none; 
 }
@@ -23,44 +31,5 @@ a:active {
 	outline: 0;
 	text-decoration:none; 
 }
-
-li {
-	list-style-type: none;
-}
-
-/* 2016-02-21 JJK */
-/*
-body {
-	padding-top: 60px;
-	padding-bottom: 70px;
-}
-
-
-#currentTitle {
-	font-weight: bold;
-}
-
-.modal.in .modal-dialog {
-    transform: none;
-}
-*/
-  
-/*
-.dirButton {
-    margin-right: 10px;
-    margin-bottom: 10px;
-    border: 1px solid;
-    background-color: #d9d9d9;
-}
-.playMusic {font-size: 2em;}
-#PlayListContainer,audio{background:#666;width:400px;padding:20px;}
-audio {border:none; padding:0 0 6px 0;}
-.addMusic {margin:0 10px 0 10px;}
-#PlayListContainer {padding:0 10px 0 10px; margin: 5px 0 0 0;}
-tr.smalltext {font-size:1em;}
-.audioControlIcon {font-size:1.8em; margin: 8px 5px 5px 0;}
 */
 
-/*
-iframe {border:none; margin:0 3px 3px 0;}
-*/
